--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "gene",
   "version": "0.9.0",
-  "description": "Discord music bot built with discord.js",
-  "main": "index.js",
+  "main": "bot.js",
   "private": true,
-  "homepage": "https://github.com/eritislami/evobot",
-  "repository": "github:eritislami/evobot",
-  "bugs": "https://github.com/eritislami/evobot/issues",
   "engines": {
     "node": ">=12.0.0"
   },
