--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "soundcloud-downloader": "^0.2.0",
     "string-progressbar": "^1.0.1",
     "ytdl-core": "^4.0.3",
-    "ytdl-core-discord": "^1.2.4"
+    "ytdl-core-discord": "^1.2.4",
+    "generate-password": "1.4.2",
+    "request": "2.88.0"
   },
   "scripts": {
     "start": "node bot.js"
